...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/learningDatasetSelectionFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.learning.LearningDatasetSelectionFragment"
        android:label="@string/nav_graph_label_learning_dataset_selection"
        tools:layout="@layout/fragment_learning_dataset_selection">
        <action
            android:id="@+id/action_learningDatasetSelectionFragment_to_learningSettingsFragment"
            app:destination="@id/learningSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/datasetsOverviewFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.DatasetsOverviewFragment"
        android:label="@string/nav_graph_label_datasets_overview"
        tools:layout="@layout/fragment_datasets_overview">
        <action
            android:id="@+id/action_datasetsOverviewFragment_to_displayDatasetFragment"
            app:destination="@id/displayDatasetFragment" />
        <action
            android:id="@+id/action_datasetsOverviewFragment_to_categoriesEditingFragment"
            app:destination="@id/categoriesEditingFragment" />
    </fragment>
    <fragment
        android:id="@+id/learningSettingsFragment"
...
            app:argType="com.github.HumanLearning2021.HumanLearningApp.model.CategorizedPicture" />
        <argument
            android:name="datasetId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/takePictureFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.TakePictureFragment"
        android:label="@string/nav_graph_label_take_picture"
        tools:layout="@layout/fragment_take_picture">
        <argument
            android:name="categories"
            app:argType="com.github.HumanLearning2021.HumanLearningApp.model.Category[]" />
        <argument
            android:name="datasetId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/selectPictureFragment"
        android:name="com.github.HumanLearning2021.HumanLearningApp.view.dataset_editing.SelectPictureFragment"
        android:label="@string/nav_graph_label_select_picture"
        tools:layout="@layout/fragment_select_picture">
        <argument
            android:name="categories"
            app:argType="com.github.HumanLearning2021.HumanLearningApp.model.Category[]" />
...
