...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">


    <Button
        android:id="@+id/button_start_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Home_startLearningButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
